--- a/src/assets/styles/Image.css
+++ b/src/assets/styles/Image.css
@@ -1,5 +1,5 @@
 img {
-    width:100%;
+    width:auto;
 }
 
 .logo {
@@ -8,4 +8,8 @@ img {
 
 .circle {  
     border-radius: 50%;
+}
+
+.margin {
+    margin-left:2em;
 }
