--- a/src/assets/styles/Repo.css
+++ b/src/assets/styles/Repo.css
@@ -18,7 +18,7 @@ p {
 
     border-style:solid;
     border-width:0.5px;
-    border-color:gray;
+    border-color:rgb(226, 226, 226);
     border-radius:0.4em;
 }
 
