--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -1,10 +1,31 @@
+#root {
+    background-color: rgba(228, 228, 228, 0.042);
+    
+}
+
 .content {
     display:flex;
+
+    /* Margin */
     margin-left : 15%;
     margin-right: 15%;
     margin-top:2%;
+    padding:2em;
+    margin-bottom:2em;
+
+    background-color:white;
+    box-shadow: 0px 0px 30px #88888854;
+    border-radius:2em;
+    
+
+    min-width:700px;
 }
 
-.content__right {
-    width:100%;
-}
+
+@media only screen and (max-width: 1000px) {
+    .content {
+        margin:0;
+        border-radius:0;
+        flex-direction:column;
+    }
+  }
