--- a/src/assets/styles/Footer.css
+++ b/src/assets/styles/Footer.css
@@ -1,18 +1,16 @@
 .footer {
-    margin-top:3em;
     display:flex;
     height:5em;
     justify-content: center;
-
+    background-color:white;
+    box-shadow: 0px 0px 30px #88888825;
 }
 
 .footer__content {
     display:flex;
     justify-content: space-around;
     align-items:center;
-    border-top-style:solid;
-    border-top-width:1px;
-    border-top-color:rgb(221, 221, 221);
+
     width:80%;
 }
 
@@ -23,13 +21,24 @@
 
 .footer__content-left--item {
     margin-right:2em;
+    width:100px;
 }
 
 .footer__content-right {
     display:flex;
     width:350px;
+    justify-content: flex-end;
 }
 
 .footer__content-right--item {
     margin-right:2em;
+    width:110px;
 }
+
+
+
+@media only screen and (max-width: 1000px) {
+    .footer__content {
+        width:100%;
+    }
+  }
