--- a/src/assets/styles/Image.css
+++ b/src/assets/styles/Image.css
@@ -1,5 +1,5 @@
 img {
-    width:auto;
+    width:100%;
 }
 
 .logo {
@@ -10,6 +10,8 @@ img {
     border-radius: 50%;
 }
 
-.margin {
-    margin-left:2em;
-}
+@media only screen and (max-width: 1000px) {
+    img {
+        max-width:300px;
+    }
+  }
