--- a/src/assets/styles/LeftContentBar.css
+++ b/src/assets/styles/LeftContentBar.css
@@ -1,3 +1,13 @@
 .content__left {
     max-width:30%;
+    margin-right:2em;
 }
+
+@media only screen and (max-width: 1000px) {
+    .content__left {
+        max-width:100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+  }
