--- a/src/assets/styles/Navbar.css
+++ b/src/assets/styles/Navbar.css
@@ -3,8 +3,14 @@
     height:2em;
     width:100%;
     padding:1em;
+    padding-right:0;
+    margin-right:0;
+    padding-left:0;
+    margin-left:0;
 
     background-color:#24292F;
+    min-width:900px;
+
 }
 
 
@@ -14,3 +20,25 @@
     align-items: center;
     margin-left:2em;
 }
+
+.right {
+    position: absolute;
+    right: 50px;
+    
+}
+
+.border {
+    border-radius:1px;
+    border-style:solid;
+    padding:5px;
+    border-radius:5px;
+    border-color:white;
+    border-width:1px;
+}
+
+@media only screen and (max-width: 1000px) {
+    .right {
+        position: static;
+        
+    }
+  }
