--- a/src/assets/styles/Overview.css
+++ b/src/assets/styles/Overview.css
@@ -1,7 +1,8 @@
 .repo__box {
     display:flex;
     flex-direction: column;
-    margin-left:1em;
+    margin-bottom:2em;
+    margin-top:2em;
 }
 
 .repo__box h4 {
@@ -18,4 +19,5 @@
     font-size:0.8em;
     text-decoration: wavy;
     color:gray;
+    text-align: right;
 }
