--- a/src/assets/styles/RightContentBar.css
+++ b/src/assets/styles/RightContentBar.css
@@ -1,6 +1,5 @@
 .content__right {
     width:70%;
-    margin-left:2em;
 }
 
 ul.react-tabs__tab-list {
@@ -11,3 +10,11 @@ ul.react-tabs__tab-list {
     color:rgb(12, 12, 12);
     font-weight:400;
 }
+
+@media only screen and (max-width: 1000px) {
+    .content__right {
+        margin:0;
+        margin-top:4em;
+        width:100%;
+    }
+  }
