--- a/src/assets/styles/Search.css
+++ b/src/assets/styles/Search.css
@@ -1,17 +1,17 @@
 input.searchBox {
-    border-radius:4px;
-    background-color:#24292F;
-    color:white;
-    padding:5px;
-    border-radius:4px;
-    width:20em;
+  border-radius: 4px;
+  background-color: #24292f;
+  color: white;
+  padding: 5px;
+  border-radius: 4px;
+  width: 20em;
 
-    -webkit-transition: all 0.8s;
-    -moz-transition: all 0.8s;
-    -o-transition: all 0.8s;
-    transition: all 0.8s;
+  -webkit-transition: all 0.8s;
+  -moz-transition: all 0.8s;
+  -o-transition: all 0.8s;
+  transition: all 0.8s;
 }
 
 input.searchBox:focus {
-    width: 30em;
+  width: 30em;
 }
