--- a/src/assets/styles/Dropdown.css
+++ b/src/assets/styles/Dropdown.css
@@ -1,45 +1,42 @@
 .dropdown {
+  width: 400px;
+  background-color: #24292f;
 
-    width:400px;
-    background-color: #24292F;
-
-    position:absolute;
-    top:60px;
-    border-radius:1em;
-    padding-bottom:1em;
-    padding:1em;
+  position: absolute;
+  top: 60px;
+  border-radius: 1em;
+  padding-bottom: 1em;
+  padding: 1em;
 }
 
 .dropdown__item {
-    display:flex;
-    width:100%;
-    background-color:#24292F;
-    color:white;
+  display: flex;
+  width: 100%;
+  background-color: #24292f;
+  color: white;
 
-    border-style:solid;
-    border-width:1px;
-    border-color:rgb(63, 63, 63);
+  border-style: solid;
+  border-width: 1px;
+  border-color: rgb(63, 63, 63);
 
-    align-items:center;
+  align-items: center;
 
-    font-weight:900;
-    padding:0.2em;
+  font-weight: 900;
+  padding: 0.2em;
 }
 
 .dropdown__item-image-container {
-    margin-right:2em;
-    height:1.6em;
-    padding:0.3em;
-
+  margin-right: 2em;
+  height: 1.6em;
+  padding: 0.3em;
 }
 
 .dropdown__item-image {
-    height:100%;
-
+  height: 100%;
 }
 
 .dropdown__item:hover {
-    background-color:gray;
-    cursor:pointer;
-    color:rgb(61, 60, 60);
+  background-color: gray;
+  cursor: pointer;
+  color: rgb(61, 60, 60);
 }
