--- a/src/assets/styles/LeftContentBar.css
+++ b/src/assets/styles/LeftContentBar.css
@@ -1,22 +1,22 @@
 .content__left {
-    max-width:30%;
-    margin-right:2em;
+  max-width: 30%;
+  margin-right: 2em;
 }
 
 .content__left--image {
-    margin:10%;
+  margin: 10%;
 }
 
 .button {
-    background-color:#24292F;
-    color:white;
+  background-color: #24292f;
+  color: white;
 }
 
 @media only screen and (max-width: 1000px) {
-    .content__left {
-        max-width:100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+  .content__left {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
   }
+}
