--- a/src/assets/styles/Repo.css
+++ b/src/assets/styles/Repo.css
@@ -1,79 +1,79 @@
 p {
-    margin: 0;
+  margin: 0;
 }
 
-
-  /* Chrome, Safari, Opera */
-  @-webkit-keyframes myfirst {
-    from {opacity: 0.2;}
-    to {opacity: 1;}
+/* Chrome, Safari, Opera */
+@-webkit-keyframes myfirst {
+  from {
+    opacity: 0.2;
   }
-
-  /* Standard syntax */
-  @keyframes myfirst {
-    from {opacity: 0.2;}
-    to {opacity: 1;}
+  to {
+    opacity: 1;
   }
-
-
-
-.repo {    
-    -webkit-transition: all 0.6s, font-size 0.6s;
-    -moz-transition: all 0.6s, font-size 0.6s;
-    -o-transition: all 0.6s, font-size 0.6s;
-    transition: all 0.6s, font-size 0.6s;
-
-    animation-duration: 3s;
-    color: gray;
-    display: flex;
-    flex-direction: column;
-
-    width: 43%;
-    padding: 2%;
-    margin: 1%;
-
-
-    height: 7em;
-    justify-content: space-around;
-
-    border-style: solid;
-    border-width: 0.5px;
-    border-color: rgb(226, 226, 226);
-    border-radius: 0.4em;
-
 }
 
+/* Standard syntax */
+@keyframes myfirst {
+  from {
+    opacity: 0.2;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.repo {
+  -webkit-transition: all 0.6s, font-size 0.6s;
+  -moz-transition: all 0.6s, font-size 0.6s;
+  -o-transition: all 0.6s, font-size 0.6s;
+  transition: all 0.6s, font-size 0.6s;
+
+  animation-duration: 3s;
+  color: gray;
+  display: flex;
+  flex-direction: column;
+
+  width: 43%;
+  padding: 2%;
+  margin: 1%;
+
+  height: 7em;
+  justify-content: space-around;
+
+  border-style: solid;
+  border-width: 0.5px;
+  border-color: rgb(226, 226, 226);
+  border-radius: 0.4em;
+}
 
 .repo:hover {
-    background-color: rgba(211, 211, 211, 0.116);
-    box-shadow: 0 0 10px #000000f6;
+  background-color: rgba(211, 211, 211, 0.116);
+  box-shadow: 0 0 10px #000000f6;
 }
 
 .title {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
 .project {
-    color: rgba(0, 0, 255, 0.7);
-    font-weight: 900;
+  color: rgba(0, 0, 255, 0.7);
+  font-weight: 900;
 }
 
 .publicity {
-    font-size: small;
-    border-style: solid;
-    border-radius: 1em;
-    border-width: 1px;
-    padding: 3px;
-    border-color: rgb(221, 221, 221)
+  font-size: small;
+  border-style: solid;
+  border-radius: 1em;
+  border-width: 1px;
+  padding: 3px;
+  border-color: rgb(221, 221, 221);
 }
 
 .background {
-    color: red;
-    font-size: 1.4em;
-    -webkit-text-fill-color: rgb(255, 255, 255);
+  color: red;
+  font-size: 1.4em;
+  -webkit-text-fill-color: rgb(255, 255, 255);
 
-
-
-    text-shadow: 2px 2px rgb(0, 0, 0);
+  text-shadow: 2px 2px rgb(0, 0, 0);
 }
