--- a/src/assets/styles/Repo.css
+++ b/src/assets/styles/Repo.css
@@ -2,26 +2,6 @@ p {
   margin: 0;
 }
 
-/* Chrome, Safari, Opera */
-@-webkit-keyframes myfirst {
-  from {
-    opacity: 0.2;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-/* Standard syntax */
-@keyframes myfirst {
-  from {
-    opacity: 0.2;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
 .repo {
   -webkit-transition: all 0.6s, font-size 0.6s;
   -moz-transition: all 0.6s, font-size 0.6s;
@@ -71,8 +51,17 @@ p {
 
 .background {
   color: red;
-  font-size: 1.4em;
   -webkit-text-fill-color: rgb(255, 255, 255);
 
   text-shadow: 2px 2px rgb(0, 0, 0);
+}
+
+.background .repo__top .title {
+  -webkit-transition: all 0.4s, font-size 0.4s;
+  -moz-transition: all 0.4s, font-size 0.4s;
+  -o-transition: all 0.4s, font-size 0.4s;
+  transition: all 0.4s, font-size 0.4s;
+
+  animation-duration: 3s;
+  font-size: 1.2em;
 }
