--- a/src/assets/styles/LeftContentBar.css
+++ b/src/assets/styles/LeftContentBar.css
@@ -5,6 +5,39 @@
 
 .content__left--image {
   margin: 10%;
+  position: relative;
+}
+
+.content__left--emoji {
+  position: absolute;
+  bottom: 13%;
+  right: 2%;
+
+  padding: 0.5em;
+  background-color: white;
+  border-radius: 100%;
+  border: 1px solid #ccc;
+  cursor: pointer;
+}
+
+.content__left--emoji-selector {
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
+
+  border-radius:25%;
+
+  display:flex;
+
+  padding: 0.5em;
+  background-color: white;
+  border: 1px solid #ccc;
+}
+
+.content__left--emoji-selector--emoji {
+  margin-right: 0.25em;
+  margin-left: 0.25em;
+  cursor: pointer;
 }
 
 .content__left--socials {
@@ -12,9 +45,9 @@
 }
 
 .content__left--socials img {
-  margin-bottom:0.6em;
-  margin:0.8em;
-  cursor:pointer;
+  margin-bottom: 0.6em;
+  margin: 0.8em;
+  cursor: pointer;
 }
 
 .button {
