--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -2,6 +2,10 @@
   background-color: rgba(228, 228, 228, 0.042);
 }
 
+.hide-cursor * {
+  cursor: none;
+}
+
 .content {
   display: flex;
 
@@ -20,7 +24,7 @@
 }
 
 .bottom-right-modal {
-  cursor:pointer;
+  
   position: fixed;
   bottom: 0;
   right: 0;
@@ -41,19 +45,19 @@
   right: 0;
   z-index: 10;
   padding: 0.5em;
-  cursor: pointer;
+  
   border-radius: 20%;
 }
 
 .bottom-right-arrow {
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  cursor:pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
   position: fixed;
   bottom: 0;
-  height:20px;
-  width:20px;
+  height: 20px;
+  width: 20px;
   right: 0;
   z-index: 10;
 
