imporvement tweaks to translator

--- a/src/pages/Zhongwen/Zhongwen.scss
+++ b/src/pages/Zhongwen/Zhongwen.scss
@@ -26,6 +26,10 @@ $color_primary: "#AA381E";
   }
 }
 
+.create-word-bank-button {
+  margin-right:4em;
+}
+
 .content-subtitle {
   h1 {
     margin: 0!important;
