--- a/src/components/Zhongwen/SavedWords/SavedWords.scss
+++ b/src/components/Zhongwen/SavedWords/SavedWords.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width:100%;
+  width: 100%;
 
   &-table {
     width: 100%;
@@ -31,5 +31,40 @@
   align-items: center;
   justify-content: space-between;
   width: 25vw;
-  min-width:500px;
+  min-width: 500px;
+}
+
+tr {
+  &:hover {
+    background-color: #f5f5f5;
+    cursor: pointer;
+  }
+}
+
+.show-more {
+  // take full width of the table
+  width: 100%;
+
+  
+  position:inherit;
+  &-title {
+    font-weight: 700;
+  }
+  &--row {
+    background-color: #f5f5f5;
+    width:100%;
+    display:flex;
+  }
+  &-char {
+    font-weight: 700;
+    width: 100px;
+  }
+  &-pinyin {
+    margin-left:1em;
+    width:100px;
+  }
+  &-definition {
+    margin-left: 1em;
+    width:300px;
+  }
 }
