tidying up and adding contact functionality

--- a/src/components/Landing/LeftContentBar/LeftContentBar.css
+++ b/src/components/Landing/LeftContentBar/LeftContentBar.css
@@ -17,7 +17,6 @@
   background-color: white;
   border-radius: 100%;
   border: 1px solid #ccc;
-  
 }
 
 .content__left--emoji-selector {
@@ -25,9 +24,9 @@
   bottom: 0%;
   right: 0%;
 
-  border-radius:25%;
+  border-radius: 25%;
 
-  display:flex;
+  display: flex;
 
   padding: 0.5em;
   background-color: white;
@@ -37,7 +36,6 @@
 .content__left--emoji-selector--emoji {
   margin-right: 0.25em;
   margin-left: 0.25em;
-  
 }
 
 .content__left--socials {
@@ -47,7 +45,7 @@
 .content__left--socials img {
   margin-bottom: 0.6em;
   margin: 0.8em;
-  
+  cursor: pointer;
 }
 
 .button {
