--- a/src/components/Landing/LeftContentBar/LeftContentBar.css
+++ b/src/components/Landing/LeftContentBar/LeftContentBar.css
@@ -12,6 +12,7 @@
   position: absolute;
   bottom: 13%;
   right: 2%;
+  cursor: pointer;
 
   padding: 0.5em;
   background-color: white;
@@ -25,6 +26,7 @@
   right: 0%;
 
   border-radius: 25%;
+  cursor: pointer;
 
   display: flex;
 
