--- a/src/components/Landing/LeftContentBar/LeftContentBar.css
+++ b/src/components/Landing/LeftContentBar/LeftContentBar.css
@@ -65,14 +65,100 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 0;
+
+    /* Cool box */
+    background: linear-gradient(to bottom, #fff 0%, #f1f1f1 100%);
+    box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset,
+      0 1px 5px rgba(0, 0, 0, 0.075);
+    border-radius: 10px;
+    border: 1px solid #c4c4c43c;
+    padding: 20px;
+    padding-top: 2em;
+  }
+
+  .content__left h1 {
+    font-size: 2.8em;
+    z-index: 100;
+    margin-bottom: 0.2em;
+    text-shadow: 0 0 46px rgb(253, 253, 253);
+  }
+
+  .content__left h3 {
+    font-size: 1.5em;
+    z-index: 100;
+  }
+
+  .content__left input {
+    width: 30%;
+    height: 2.5em;
+    font-size: 1.3em;
+    border-radius: 0.5em;
+    font-weight: 600;
+
+    /* Fancy button */
+    border: none;
+    outline: none;
+    cursor: pointer;
+
+    /* Cool background */
+    background: linear-gradient(to right, #3e4867, #0f9ba8);
+    background-size: 200% auto;
+    box-shadow: 0 0 20px #eee;
+    transition: 0.5s;
   }
 
   .content__left--image {
     margin: 0;
+    width: 100%;
+    height: 5%;
+    text-align: center;
+  }
+
+  .content__left--image img {
+    width: 50%;
+    border-radius: 50%;
+    object-fit: contain;
+    opacity: 0.8;
+
+    /* Cool effect */
+    filter: grayscale(20%%);
+    transition: 0.5s;
   }
 
   .content__left--button {
     width: 200px;
-    margin-bottom: 2em;
+    margin-bottom: 1em;
+    height: 2em !important;
+    z-index: 100;
+  }
+
+  .content__left--socials {
+    z-index: 100;
+
+    margin-bottom: 0em;
+    width: 70%;
+    border-radius: 5%;
+    z-index: 100;
+  }
+
+  .content__left--socials img {
+    margin: 5%;
+    height: 3em;
+    min-height: 70px;
+    max-height: 90px;
+    width: 100%;
+  }
+
+  .content__left--emoji {
+    display: none;
+  }
+
+  .info {
+    z-index: 100;
+  }
+
+  .infopanel {
+    font-size: 1em;
   }
 }
