fixed conflicting naming issue

--- a/src/pages/Mountains/Mountains.scss
+++ b/src/pages/Mountains/Mountains.scss
@@ -67,7 +67,7 @@
   height: 50vh !important;
 }
 
-.dark {
+.dark-landscape {
   position: absolute;
   // Above the landscape
   object-fit: unset!important;
