cosmetic fixes to zhongwen

--- a/src/components/Navbar/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar/Navbar.scss
@@ -16,7 +16,7 @@
   }
   &-chinese {
     background-color: #aa381e;
-    background-image: url(http://localhost:3000/chinese_nav.png);
+    background-image: url(../../../assets/images/chinese_nav.png);
     background-repeat: repeat;
     background-position: center;
     background-size: cover;
