--- a/src/components/Zhongwen/SavedWords/components/Modal/style.scss
+++ b/src/components/Zhongwen/SavedWords/components/Modal/style.scss
@@ -31,7 +31,8 @@
     padding: 20px;
     width: 100%;
     max-width: 800px;
-    height: 500px;
+    max-height: 600px;
+
     overflow: auto;
   }
 
@@ -55,6 +56,11 @@
         align-items: center;
         width: 100%;
         margin-bottom: 2rem;
+
+        // Last row has no margin
+        &:last-child {
+          margin-bottom: 0;
+        }
 
         &-label {
           width: 100%;
@@ -94,7 +100,6 @@
     td {
       border-top: 1px solid #ccc;
       padding: 0.5rem;
-
     }
   }
 
