--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -2,11 +2,63 @@
   background-color: rgba(228, 228, 228, 0.042);
 }
 
+#canv {
+  /* background-color: red; */
+  /* Layer over existing background */
+  position: absolute;
+  /* Position the canvas */
+  top: 0;
+  left: 0;
+  /* Make the canvas cover the entire space */
+  width: 100%;
+  height: 100%;
+
+  z-index: -1;
+}
+
+.hypnotoad {
+  /* background-color: red; */
+  /* Layer over existing background */
+  height: 300px;
+  width: 300px;
+  position: absolute;
+  /* Center */
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+}
+
+.stripe-speed {
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;  
+
+}
+.stripe-speed input {
+  width: 100%;
+}
+
+.stripe-speed p {
+  /* Gradient text color */
+  background: -webkit-linear-gradient(#ff0000, #ffff00, #00ff00, #00ffff, #0000ff, #ff00ff, #ff0000);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  font-weight: 900;
+  font-size: 1.5rem;  
+}
 .hide-cursor * {
   cursor: none;
 }
 
-.app {
+.show {
+  display: block!important;
+}
+
+.hide {
+  display: none!important;
 }
 
 .content {
@@ -22,11 +74,9 @@
   background-color: white;
   box-shadow: 0px 0px 30px #88888854;
   border-radius: 2em;
-
 }
 
 .bottom-right-modal {
-  
   position: fixed;
   bottom: 0;
   right: 0;
@@ -47,7 +97,7 @@
   right: 0;
   z-index: 10;
   padding: 0.5em;
-  
+
   border-radius: 20%;
 }
 
@@ -55,7 +105,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  
+
   position: fixed;
   bottom: 0;
   height: 20px;
