--- a/src/components/Zhongwen/SavedWords/components/Modal/style.scss
+++ b/src/components/Zhongwen/SavedWords/components/Modal/style.scss
@@ -83,6 +83,20 @@
     }
   }
 
+  &-delete-button {
+    background-color: #f44336!important;
+    color: #fff;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    font-weight: bold;
+
+    &:hover {
+      background-color: #d32f2f;
+    }
+  }
+
   &-audio-icon {
     width: 1rem;
     height: 1rem;
