--- a/src/components/Generic/Footer/components/TreasureChest/style.scss
+++ b/src/components/Generic/Footer/components/TreasureChest/style.scss
@@ -73,6 +73,22 @@
     align-items: center;
     padding: 20px;
 
+    &__button {
+      margin-top: 20px;
+      cursor: pointer;
+      font-size: 0.8em;
+      font-weight: bold;
+      padding: 10px 20px;
+      border-radius: 5px;
+      border: 1px solid rgb(216, 216, 216);
+      background-color: white;
+      transition: all 0.2s ease-in-out;
+
+      &:hover {
+        background-color: rgb(216, 216, 216);
+      }
+    }
+
     &__subtitle {
       font-size: 1em;
       font-style: italic;
