--- a/src/components/Generic/Footer/components/TreasureChest/style.scss
+++ b/src/components/Generic/Footer/components/TreasureChest/style.scss
@@ -160,6 +160,7 @@
         border: 1px solid rgb(114, 99, 15);
         padding: 10px;
         border-radius: 10px;
+        cursor: pointer;
       }
     }
   }
