--- a/src/components/Contact/style.scss
+++ b/src/components/Contact/style.scss
@@ -79,7 +79,27 @@
   outline: none;
 }
 
-.active {
+.modal-active {
   opacity: 1;
   pointer-events: all;
+}
+
+
+@media only screen and (max-width: 1000px) {
+  .active {
+    font-size: 3em!important;
+  }
+
+  .modal-header {
+    font-size: 2em!important;
+  }
+
+  .modal-body {
+    font-size: 2em!important;
+
+
+    & small {
+      font-size: 0.8em;
+    }
+  }
 }
