--- a/src/components/Navbar/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar/Navbar.scss
@@ -52,17 +52,24 @@
   .navbar {
     justify-content: space-between;
     width: 100%;
-    height: 3em;
+    height: 4.5em;
     align-items: center;
+
+    
   }
 
   .navbar img {
-    height: 2em;
-    width: 2em;
+    height: 3em;
+    width: 3em;
   }
   .right {
     position: static;
-    margin-right: 2em;
+    margin-right: 1em;
+    font-size:2.5em;
+  }
+
+  .border {
+    padding:0.3em;
   }
 
   .throw {
