--- a/src/components/Navbar/Search/Search.css
+++ b/src/components/Navbar/Search/Search.css
@@ -15,3 +15,9 @@ input.searchBox {
 input.searchBox:focus {
   width: 30em;
 }
+
+@media only screen and (max-width: 1000px) {
+  input.searchBox {
+    display: none;
+  }
+}
