--- a/src/components/Landing/RightContentBar/RightContentBar.css
+++ b/src/components/Landing/RightContentBar/RightContentBar.css
@@ -30,6 +30,12 @@ ul.react-tabs__tab-list {
   .react-tabs__tab {
     font-size: 1.5em;
     padding: 0.8em;
+    border: 1px solid rgb(109, 109, 109);
+    width: 33%;
+    text-align: center;
+    margin: 5px;
+    border-top-left-radius: 0.5em;
+    border-top-right-radius: 0.5em;
   }
 
   .react-tabs__tab--selected {
