--- a/src/components/Generic/Image/Image.css
+++ b/src/components/Generic/Image/Image.css
@@ -15,8 +15,7 @@ img {
   cursor: pointer;
 }
 
-@media only screen and (max-width: 1000px) {
-  img {
-    /* max-width: 300px; */
-  }
+.contact {
+  height: 2em!important;
 }
+
