--- a/src/components/Landing/Swiper/style.scss
+++ b/src/components/Landing/Swiper/style.scss
@@ -6,17 +6,21 @@
   height: 100%;
   overflow: hidden;
   background: rgb(189 189 189 / 10%);
+  border-top-left-radius: 5%;
+  border-top-right-radius: 5%;
+  border: 4px solid #e6e6e6;
+  
+  // Big box shadow
+  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 
 
   &__card {
     &__top {
       height: 100%;
       // border radius at top
-      border-top-left-radius: 5%;
-      border-top-right-radius: 5%;
+
       overflow: hidden;
       // light gray border
-      border: 1px solid #e6e6e6;
     }
 
     &__bottom {
