--- a/src/components/Landing/Swiper/style.scss
+++ b/src/components/Landing/Swiper/style.scss
@@ -17,10 +17,22 @@
   &__card {
     &__top {
       height: 100%;
+      width: 100%;
       // border radius at top
 
       overflow: hidden;
-      // light gray border
+      position: relative;
+    }
+
+    &__icon {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 50%;
+      height: 50%;
+      opacity: 0;
+      transition: opacity 0.3s ease;
     }
 
     &__bottom {
