--- a/src/components/Landing/Swiper/style.scss
+++ b/src/components/Landing/Swiper/style.scss
@@ -1,4 +1,8 @@
 // Tinder clone swipe cards
+.swiper-container {
+  // Dont show overflow
+  overflow: hidden;
+}
 
 .swiper {
   position: relative;
@@ -9,18 +13,28 @@
   border-top-left-radius: 5%;
   border-top-right-radius: 5%;
   border: 4px solid #e6e6e6;
-  
-  // Big box shadow
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
-
 
   &__card {
     &__top {
       height: 100%;
+      width: 100%;
       // border radius at top
 
       overflow: hidden;
-      // light gray border
+      position: relative;
+    }
+
+    &__icon {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 50%;
+      height: 50%;
+      opacity: 0;
+      transition: opacity 0.3s ease;
+
     }
 
     &__bottom {
@@ -53,11 +67,11 @@
         font-size: 1.9em;
         color: #999;
         background: #fff;
-        padding:1.3em;
+        padding: 1.3em;
         color: black;
         border-radius: 1em;
         border: 1px solid #cdcdcd;
-        
+
         &__key {
           color: rgb(68, 68, 68);
           // italics
