--- a/src/components/Landing/Swiper/style.scss
+++ b/src/components/Landing/Swiper/style.scss
@@ -14,13 +14,12 @@
   border-top-right-radius: 5%;
   border: 4px solid #e6e6e6;
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+  position: relative;
 
   &__card {
     &__top {
       height: 100%;
       width: 100%;
-      // border radius at top
-
       overflow: hidden;
       position: relative;
     }
@@ -96,6 +95,8 @@
     border-bottom-left-radius: 5%;
     border-bottom-right-radius: 5%;
     border-bottom: 3px solid #e6e6e6;
+
+
   }
 
   &__button {
