--- a/src/components/Zhongwen/Groups/Groups.scss
+++ b/src/components/Zhongwen/Groups/Groups.scss
@@ -10,7 +10,7 @@
 }
 
 .zhongwen-group-card {
-  margin: 2em;
+  margin: 1em;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -18,8 +18,13 @@
   align-items: center;
   margin-bottom: 1em;
 
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  padding: 1em;
+  width: 200px;
+  height: 200px;
+
   &-header {
-    width: 200px;
     height: 200px;
 
     & img {
@@ -37,5 +42,32 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+
+  &-footer {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+
+    &-button {
+      margin: 0.5em;
+      margin-right: 0;
+      height: 1.5em;
+      color: rgb(168, 161, 161);
+      cursor: pointer;
+
+      &:hover {
+        color: #b73a1e;
+      }
+    }
+  }
+
+  &:hover {
+    cursor: pointer;
+    border: 1px solid #aaa;
+    box-shadow: 0 0 10px #aaa;
+    background-color: #f5f5f5;
   }
 }
