--- a/src/components/Zhongwen/Groups/ManageGroupModal/ManageGroupModal.scss
+++ b/src/components/Zhongwen/Groups/ManageGroupModal/ManageGroupModal.scss
@@ -25,6 +25,32 @@
   &-header {
     font-size: 1.5em;
     font-weight: bold;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 4em;
+
+    & h1 {
+      margin-right: 0.3em;
+    }
+
+    &-icon {
+      height: 0.8em !important;
+      width: 0.8em !important;
+      border-radius: 50%;
+      padding: 0.2em;
+      font-size: 1em;
+      color: rgb(139, 131, 131);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+
+      &:hover {
+        background-color: #a3a3a3;
+      }
+    }
   }
 
   &-body {
@@ -32,9 +58,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 80%;
     height: 100%;
     margin-bottom: 1em;
+    background-color: #f2f2f2;
+    border-radius: 0.5em;
+    padding: 2em;
   }
 
   &-input {
@@ -79,6 +108,11 @@
     align-items: center;
     width: 100%;
     height: 100%;
+    margin-top: 1.5em;
+    background-color: #a3a3a3;
+    border-radius: 0.5em;
+    padding: 0.5em;
+
   }
 
   &-saved-words {
@@ -89,7 +123,6 @@
       align-items: center;
       width: 100%;
       height: 100%;
-      margin-bottom: 1em;
 
       &-icon {
         font-size: 1.5em;
@@ -138,10 +171,20 @@
       height: 100%;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       overflow-y: scroll;
-      max-height: 200px;
+      overflow-x: hidden;
+      min-height: 300px;
+      max-height: 400px;
+
+      &-header {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 1em;
+      }
 
       &-item {
         width: 100%;
@@ -155,7 +198,6 @@
         &:hover {
           background-color: rgba(204, 204, 204, 0.263);
         }
-
       }
     }
   }
@@ -163,7 +205,6 @@
   &-cancel {
     width: 100px;
     height: 30px;
-    border: 1px solid #ccc;
     border-radius: 0.5em;
     margin-right: 1em;
     display: flex;
@@ -175,7 +216,6 @@
   &-save {
     width: 100px;
     height: 30px;
-    border: 1px solid #ccc;
     border-radius: 0.5em;
     display: flex;
     justify-content: center;
