--- a/src/components/Zhongwen/Groups/Groups.scss
+++ b/src/components/Zhongwen/Groups/Groups.scss
@@ -24,7 +24,6 @@
   width: 200px;
 
   &-header {
-
     & img {
       height: 100px;
       width: 100%;
@@ -40,6 +39,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    & h2 {
+      text-align: center;
+    }
+
+    & p {
+      text-align: center;
+      text-overflow: ellipsis;
+      font-style: italic;
+    }
   }
 
   &-footer {
