--- a/src/pages/Twitter/style.scss
+++ b/src/pages/Twitter/style.scss
@@ -1,16 +1,21 @@
-#twitter {
-  // Font is the chirp-regular-web in /tiwtter/font/Chirp-Regular-web.woff
-  // Import it
-  @import url('https://fonts.googleapis.com/css2?family=Chirp:wght@400;700&display=swap');
-  font-family: 'Chirp-Regular-web', sans-serif;
+// Import Chirp-regular-font from public folder /twitter/font/Chirp-Regular-web.woff
+
+@font-face {
+  font-family: "Chirp-Regular-web";
+  src: url("../../../public/twitter/font/chirp-regular-web.woff") format("woff");
+}
+
+// Import Chirp-bold-font
+@font-face {
+  font-family: "Chirp-Bold-web";
+  src: url("../../../public/twitter/font/chirp-bold-web.woff") format("woff");
 }
 
 .twitter {
   &-container {
-    display:flex;
+    display: flex;
     flex-direction: row;
   }
-
 
   &-content {
     width: 60%;
@@ -25,11 +30,30 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
+
+    &-header {
+      background-color: #fff;
+      width: 100%;
+      height: 50px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0 20px;
+      box-sizing: border-box;
+      border-bottom: 1px solid #e6ecf0;
+
+      &-title {
+        font-size: 20px;
+        font-weight: 700;
+        color: #14171a;
+        // Font bold
+        font-family: "Chirp-Bold-web", sans-serif;
+      }
+    }
   }
 
   &-sidebar {
-
     // If width is under 1000px hide
     @media (max-width: 1000px) {
       display: none;
@@ -42,6 +66,4 @@
     align-items: center;
     justify-content: center;
   }
-
-
 }
