--- a/src/pages/Twitter/style.scss
+++ b/src/pages/Twitter/style.scss
@@ -29,8 +29,12 @@
     background-color: #f5f8fa;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: flex-start;
+
+    max-width: 600px;
+    margin-right: 20px;
+    border-right: 1px solid #e6ecf0;
 
     &-header {
       background-color: #fff;
@@ -42,6 +46,7 @@
       padding: 0 20px;
       box-sizing: border-box;
       border-bottom: 1px solid #e6ecf0;
+
 
       &-title {
         font-size: 20px;
