--- a/src/pages/Twitter/components/Timeline/components/Post/style.scss
+++ b/src/pages/Twitter/components/Timeline/components/Post/style.scss
@@ -6,6 +6,8 @@
   background-color: #fff;
   border-bottom: 1px solid #e6ecf0;
   padding-bottom: 1em;
+  position: relative;
+
 
   &:hover {
     background-color: #f5f8fa;
@@ -16,11 +18,13 @@
     width: 50px;
     height: 50px;
     margin: 1em;
+    z-index: 9999;
 
     & img {
       width: 100%;
       height: 100%;
       border-radius: 50%;
+      object-fit: cover;
     }
   }
 
@@ -30,7 +34,7 @@
     flex-direction: column;
     margin-top: 1em;
     box-sizing: border-box;
-    padding-right:1em;
+    padding-right: 1em;
 
     &-header {
       display: flex;
@@ -69,6 +73,12 @@
 
     &-body {
       box-sizing: border-box;
+
+      & a {
+        color: #399ef0;
+        text-decoration: none;
+      }
+
       &-image {
         margin-top: 1em;
         width: 100%;
@@ -81,8 +91,6 @@
           height: 100%;
           object-fit: cover;
         }
-
-
       }
     }
 
@@ -128,4 +136,38 @@
       }
     }
   }
+
+  &-reply {
+    background-color: white;
+    padding-left: 55px;
+    padding-top: 0.8em;
+    color: gray;
+    font-weight: bold;
+    font-size: 0.9em;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 100%;
+    & img {
+      height: 15px;
+      width: 15px;
+      margin-right: 0.5em;
+    }
+
+    &-line {
+      position: absolute;
+      height: 100%;
+      width: 2.5px;
+      background-color: rgba(180, 180, 180, 0.46);
+      left: 40px;
+      top: 50px;
+      z-index: 9998;
+    }
+
+    &-type {
+      border: 0;
+    }
+  }
+
 }
