--- a/src/pages/Twitter/components/Tweet/style.scss
+++ b/src/pages/Twitter/components/Tweet/style.scss
@@ -25,7 +25,7 @@
   &-avatar {
     width: 50px;
     height: 50px;
-    margin-right: 10px;
+    margin-right: 0.3em;
 
     & img {
       width: 100%;
@@ -36,7 +36,7 @@
   }
 
   &-content {
-    width: 100%;
+    width: 90%;
     height: 100%;
     display: flex;
     flex-direction: column;
