--- a/src/pages/Twitter/components/Timeline/components/Post/style.scss
+++ b/src/pages/Twitter/components/Timeline/components/Post/style.scss
@@ -3,15 +3,17 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  background-color: #fff;
   border-bottom: 1px solid #e6ecf0;
   padding-bottom: 1em;
   position: relative;
 
 
-  &:hover {
-    background-color: #f5f8fa;
-    cursor: pointer;
+  &-container {
+    background-color: white;
+    &:hover {
+      cursor: pointer;
+      background-color: #f5f8fa;
+    }
   }
 
   &-avatar {
@@ -138,7 +140,6 @@
   }
 
   &-reply {
-    background-color: white;
     padding-left: 55px;
     padding-top: 0.8em;
     color: gray;
