--- a/src/pages/Twitter/components/Timeline/components/Post/style.scss
+++ b/src/pages/Twitter/components/Timeline/components/Post/style.scss
@@ -92,6 +92,8 @@
           width: 100%;
           height: 100%;
           object-fit: cover;
+
+          border-radius: 16px;
         }
       }
     }
