--- a/src/pages/Popcorn/style.scss
+++ b/src/pages/Popcorn/style.scss
@@ -15,7 +15,6 @@
   /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
 
   &-container {
-    width: 50%;
     height: 600px;
     display: flex;
     flex-direction: column;
@@ -25,7 +24,7 @@
     padding: 0 20px;
     background-color: white;
     border-radius: 20px;
-    max-width: 500px;
+    width: 500px;
   }
 
   &-content {
