--- a/src/pages/Bar/style.scss
+++ b/src/pages/Bar/style.scss
@@ -55,9 +55,8 @@
       align-items: center;
       position: relative;
       border-radius: 10px;
-      border-color: rgba(185, 185, 185, 0.5);
       padding: 10px;
-      background-color: rgba(0, 0, 0, 0.877);
+      background-color: rgba(27, 27, 27, 0.877);
       box-sizing: border-box;
 
       &-header {
@@ -219,10 +218,11 @@
       height: 100%;
       border-radius: 10px;
       border-color: rgba(15, 15, 15, 0.5);
-      background-color: rgba(255, 255, 255, 0.767);
+      background-color: #bebebef5;
       // Overflow, but dont hide
-      overflow-y: scroll;
+      overflow-y: auto;
       position: relative;
+      font-weight: 600;
 
       &-subheading {
         font-size: 20px;
@@ -230,19 +230,35 @@
         box-sizing: border-box;
         font-weight: 900;
         color: black;
+        background-color: rgb(214, 214, 214);
         // Bottom border stylish
         position: relative;
         display: inline-block;
         padding: 0 10px;
-        margin: 10px 0;
+        margin-bottom: 10px;
+
+        // All ones after first have margin-top
+        &:not(:first-child) {
+          margin-top: 10px;
+        }
 
         &::after {
           content: "";
           position: absolute;
-          bottom: -5px;
+          bottom: -4px;
           left: 0;
           width: 100%;
-          height: 2px;
+          height: 4px;
+          background-color: black;
+        }
+
+        &::before {
+          content: "";
+          position: absolute;
+          top: -4px;
+          right: 0;
+          width: 100%;
+          height: 4px;
           background-color: black;
         }
       }
