--- a/src/assets/styles/App.css
+++ b/src/assets/styles/App.css
@@ -83,6 +83,10 @@
   border-radius: 2em;
 }
 
+.content__divider {
+  height: 2.5em;
+}
+
 .bottom-right-modal {
   position: fixed;
   bottom: 0;
@@ -134,6 +138,15 @@
 @media only screen and (max-width: 1000px) {
   .content {
     margin: 0;
+  }
+
+  .content__divider {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 680px) {
+  .content {
     border-radius: 0;
     flex-direction: column;
   }
