--- a/src/components/Landing/Repo/Repo.scss
+++ b/src/components/Landing/Repo/Repo.scss
@@ -179,9 +179,9 @@ p {
     font-weight: 900;
 
     text-shadow: 1px 1px rgb(0, 0, 0);
-    
-    // increase size
     font-size: 1.5em!important;
-    height: 10em;
+
+    // If is mobile
+
   }
 }
